--- a/_data/planeten.yml
+++ b/_data/planeten.yml
@@ -1,4 +1,4 @@
-Woodstock:
+- Woodstock:
   Typ: Erdähnlich
   Name: Woodstock
   Sektor: "[Neutrale Zone](/Weltraum/Neutrale_Zone/)"
@@ -7,7 +7,7 @@ Woodstock:
   Hauptstadt: Das große Festival
   Besiedelung: Das großes Festival
   Politisches: keine politischen Beziehungen
-Brarbragoz:
+- Brarbragoz:
   Typ: Erdähnlich
   Name: Brarbragoz
   Sektor:
