--- a/_data/planeten.yml
+++ b/_data/planeten.yml
@@ -1,12 +1,3 @@
-- Woodstock:
-  Typ: Erdähnlich
-  Name: Woodstock
-  Sektor: "[Neutrale Zone](/Weltraum/Neutrale_Zone/)"
-  Monde: Asteroidengürtel
-  Einwohner: Hippies
-  Hauptstadt: Das große Festival
-  Besiedelung: Das großes Festival
-  Politisches: keine politischen Beziehungen
 - Brarbragoz:
   Typ: Erdähnlich
   Name: Brarbragoz
@@ -16,3 +7,12 @@
   Hauptstadt: viele
   Besiedelung: kleine Städte
   Politisches: Zurückgebliebener Planet
+- Woodstock:
+  Typ: Erdähnlich
+  Name: "[Woodstock](/Weltraum/Neutrale_Zone/Woodstock)"
+  Sektor: "[Neutrale Zone](/Weltraum/Neutrale_Zone/)"
+  Monde: Asteroidengürtel
+  Einwohner: Hippies
+  Hauptstadt: Das große Festival
+  Besiedelung: Das großes Festival
+  Politisches: keine politischen Beziehungen
