--- a/_data/planeten.yml
+++ b/_data/planeten.yml
@@ -7,6 +7,15 @@
   Hauptstadt: viele
   Besiedelung: kleine Städte
   Politisches: Zurückgebliebener Planet
+- Kappa_Gamma:
+  Typ: Erdähnlich
+  Name: "[Kappa Gamma](/Weltraum/Neutrale_Zone/Kappa_Gamma/)"
+  Sektor: "[Neutrale Zone](/Weltraum/Neutrale_Zone/)"
+  Monde: 2
+  Einwohner: KIs und Roboter
+  Hauptstadt: Kappa und Gamma
+  Besiedelung: Roboterstädte
+  Politisches: keine politischen Beziehungen
 - Woodstock:
   Typ: Erdähnlich
   Name: "[Woodstock](/Weltraum/Neutrale_Zone/Woodstock)"
