--- a/_data/slc.yml
+++ b/_data/slc.yml
@@ -1,22 +1,22 @@
-- Chester_Gateland:
+Chester_Gateland:
   Name: Chester Gateland
   Rasse: Trull
   Kategorie: Militär
   Position: "Bekannter Kapitän eines großen Trullschiffes, der Gateland."
   Wohnort: Trullmania
-- Hari_Jambal:
+Hari_Jambal:
   Name: Hari Jambal
   Rasse: Asiat
   Kategorie: Militär
   Position: "Admiral der Flotte Neuasiens."
   Wohnort: Neuchina
-- Rachel_Springs:
+Rachel_Springs:
   Name: Rachel Springs
   Rasse: Mensch
   Kategorie: Militär
   Position: "Eine ranghohe Generalin der Föderationsflotte."
   Wohnort: Erde
-- Walter_Kirkham:
+Walter_Kirkham:
   Name: Walter Kirkham
   Rasse: Mensch
   Kategorie: Militär
