--- a/_data/städte.yml
+++ b/_data/städte.yml
@@ -1,4 +1,4 @@
-- Kappa-Stadt:
+Kappa-Stadt:
   Planet: "[Kappa Gamma]({{ site.baseurl }}/Weltraum/Neutralezone/Kappa_Gamma/)"
   Name: "[Kappa-Stadt](/Weltraum/Neutrale_Zone/Kappa_Gamma/Kappa)"
   Groesse: Millionenstadt
