--- a/_data/planeten.yml
+++ b/_data/planeten.yml
@@ -1,4 +1,4 @@
-- Brarbragoz:
+Brarbragoz:
   Typ: Erdähnlich
   Name: Brarbragoz
   Sektor:
@@ -7,7 +7,7 @@
   Hauptstadt: viele
   Besiedelung: kleine Städte
   Politisches: Zurückgebliebener Planet
-- Kappa_Gamma:
+Kappa_Gamma:
   Typ: Erdähnlich
   Name: "[Kappa Gamma](/Weltraum/Neutrale_Zone/Kappa_Gamma/)"
   Sektor: "[Neutrale Zone](/Weltraum/Neutrale_Zone/)"
@@ -16,7 +16,7 @@
   Hauptstadt: Kappa und Gamma
   Besiedelung: Roboterstädte
   Politisches: keine politischen Beziehungen
-- Woodstock:
+Woodstock:
   Typ: Erdähnlich
   Name: "[Woodstock](/Weltraum/Neutrale_Zone/Woodstock)"
   Sektor: "[Neutrale Zone](/Weltraum/Neutrale_Zone/)"
