--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: SpacePirates
 description: Piraten im Weltraum
 paginate: 4
-paginate_path: "/Aktuelles/page:num/"
+paginate_path: "/Aktuelles/Seite_:num/"
 
 sass:
     sass_dir: assets/css
