--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: SpacePirates
 description: Piraten im Weltraum
+url: https://spacepirates.jcgames.de
 paginate: 4
 paginate_path: "/Aktuelles/Seite_:num/"
 
