--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ description: Piraten im Weltraum
 url: https://spacepirates.jcgames.de
 paginate: 10
 paginate_path: "/Aktuelles/Seite_:num/"
+collections_dir: collections
+collections:
+  Piratencrews:
+    sort_by: name
