--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,17 @@ jobs:
         env:
           JEKYLL_ENV: production
 
+      - name: install linters
+        run: |
+          sudo apt-get install -y npm
+          npm install eslint --save-dev
+          npm install stylelint --save-dev
+          npm install stylelint-config-standard --save-dev
+          npm install htmlhint --save-dev
+
+      - name: lint js css html
+        run: .scripts/check-site.sh
+
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
