--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Install linters
         run: |
+          sudo apt-get update
           sudo apt-get install -y npm
           npm install eslint --save-dev
           npm install stylelint --save-dev
